# ddl_spark_converter

./: .coverage  .gitignore  README.md  pyproject.toml
ddl_spark_converter/: main_converter.py  test.py
ddl_spark_converter/db_converter/: IConverter.py  mssql.py  mysql.py  oracle.py
ddl_spark_converter/db_from_spark_datatype_conversion_info/: oracle.py  postgresql.py
ddl_spark_converter/db_to_spark_datatype_conversion_info/: mssql.py  mysql.py  oracle.py  postgresql.py
ddlsparkconverter/: main_converter.py  test.py
ddlsparkconverter/db_converter/: IConverter.py  mssql.py  mysql.py  oracle.py  utils.py
ddlsparkconverter/db_from_spark_datatype_conversion_info/: mssql.py  mysql.py  oracle.py
ddlsparkconverter/db_to_spark_datatype_conversion_info/: oracle.py
tests/: test_mssql_mysql.py  test_mssql_oracle.py  test_mysql_mssql.py  test_mysql_oracle.py  test_oracle_mssql.py  test_oracle_mysql.py
tests/input_ddl/mssql_oracle/: simple_create.txt
tests/input_ddl/mssql_oracle/mssql_mysql/: simple_create.txt
tests/input_ddl/mysql_oracle/: simple_create.txt
tests/input_ddl/oracle_mysql/: simple_create.txt
tests/output_ddl/mssql_mysql/: simple_create.txt
tests/output_ddl/mssql_oracle/: simple_create.txt
tests/output_ddl/mysql_mssql/: simple_create.txt
tests/output_ddl/mysql_oracle/: simple_create.txt
tests/output_ddl/oracle_mssql/: simple_create.txt
tests/output_ddl/oracle_mysql/: simple_create.txt
