[tool.poetry]
name = "ddlsparkconverter"
version = "0.1.0"
description = "Project for converting DDLs from DBMS via spark"
authors = ["Ilya Kochagin <ilyakochagin@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
simple-ddl-parser = "^1.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
